# quant-predictive-analysis

./: README.md  initialize.py  main.py  pyproject.toml  requirements.txt  teardown.py
_helpers/: imports_for_cmd.py
config/: stocks_to_ingest.json
helpers/: TradingBotOanda.ipynb  general_stock_ingestor.py  imports_for_cmd.py  reset_db_and_seed.sh  train_and_evaluate_model.ipynb
src/curated/: stock_curator.py
src/ingestion/: stock_ingestor.py
src/ingestion/specified_tickers/: nvda_ingestor.py
src/utils/: config.py  constants.py  logger.py  stock_duck_db_conn.py
src/utils/common/: __init__.py  stock_duck_db_conn.py
