[project]
name = "quant-predictive-analysis"
version = "0.1.0"
description = "Produce analysis on stocks in a scalable way"
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "dotenv>=0.9.9",
    "duckdb>=1.4.3",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "pandas-ta>=0.4.71b0",
    "yfinance>=1.0",
]
